# Auto-trade-stock-demo

./: .gitignore  IMPLEMENTATION-PLAN.md  README.md  SELF-EVALUATION.md  TECH-STACK.md  TOSS-AI-TRADING-INSIGHTS.md  USAGE.md  study.md
infra/: README.md  bootstrap-import.tf  inject-secrets.ps1  main.tf  (+3 more)
server/: .dockerignore  .gcloudignore  Dockerfile  pyproject.toml
server/app/: main.py
server/app/api/: dashboard.py  deps.py  report.py  routes.py  tick.py
server/app/core/: calendar.py  config.py  logging_setup.py  notify.py  settings.py
server/app/db/: __init__.py  lock.py  models.py  repo.py  session.py
server/app/engine/: allocator.py  calibration.py  costs.py  evaluation.py  exits.py  indicators.py  llm.py  paper.py  pipeline.py  regime.py  replay.py  report.py  research.py  screener.py  stress.py  symbols.py  universe.py
server/app/news/: alignment.py  collector.py
server/app/orders/: circuit_breaker.py  context.py  guardrails.py  models.py  reconcile.py  service.py
server/app/static/: dashboard.html
server/app/toss/: caching.py  client.py  models.py  sandbox.py
server/data/: krx_holidays.json  krx_symbols.json  news_targets.json
server/scripts/: .env.example  README.md  backtest.py  calibration_report.py  fetch_history.py  fetch_krx_symbols.py  live_check.py  llm_live_check.py  probe_candles.py  run_local.py  run_sandbox.py  stress_sim.py  tick_dry_run.py  toss_smoke.py
server/tests/: test_allocator.py  test_api.py  test_calibration.py  test_circuit_breaker.py  test_costs.py  test_dashboard.py  test_db.py  test_evaluation.py  test_exits.py  test_indicators.py  test_llm.py  test_lock.py  test_logging.py  test_news.py  test_notify_and_cache.py  test_oidc.py  test_order_guardrails.py  test_paper.py  test_pipeline.py  test_reconcile.py  test_regime.py  test_replay.py  test_report_and_calendar.py  test_research.py  test_research_cache.py  test_sandbox_mode.py  test_screener.py  test_stress.py  test_symbols.py  test_toss_client.py  test_toss_models.py  test_universe.py
server/tests/fixtures/: accounts.json  buying_power.json  candles.json  holdings.json  prices.json  stocks.json
(+1 files in other folders)
